2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-outofband-timeout.man: Fix text.

	* common/doc/manpage-common-outofband-timeout.man: Split into
	manpage-common-outofband-session-timeout.man and
	manpage-common-outofband-retransmission-timeout.man.

	* Adjust all manpages appropriately for change.

	* ipmipower/: Use common manpages as appropriate.

	* ipmiconsole/src/ipmiconsole/: Support --session-timeout and
	--retransmission-timeout options.

	* common/doc/manpage-common-cipher-suite-id.man: Split into
	manpage-common-cipher-suite-id-main.man and
	manpage-common-cipher-suite-id-details.man.
	
	* Adjust all manpages appropriately for change.

	* ipmiconsole/: Use common manpages as appropriate.

	* common/src/tool-cmdline-common.c (common_parse_opt): Check that session
	timeout and retransmission timeout are not zero.

	* common/src/tool-cmdline-common.c (verify_common_cmd_args): Check
	that retransmission timeout is not larger than session timeout.

	* ipmipower/: Various cmdline input changes to make ipmipower more
	like other tools.

2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/src/tool-cmdline-common.c (parse_workaround_flags): Fix
	parsing bug.

	* libfreeipmi/src/api/ipmi-lan-session-common.c,
	libfreeipmi/src/api/ipmi-api.c,
	libfreeipmi/include/freeipmi/api/ipmi-api.h,
	ipmipower/src/,
	common/src/tool-common.c,
	common/doc/manpage-common-troubleshooting.man: Add new "connection
	timeout" error message.
	
2008-05-15  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/: Remove excess newline outputs.

	* ipmipower/src/ipmipower_privilege_level.h,
	ipmipower/src/ipmipower_privilege_level.c,
	ipmipower/src/ipmipower_workarounds.h,
	ipmipower/src/ipmipower_workarounds.c,
	ipmipower/src/ipmipower_cipher_suite_id.h,
	ipmipower/src/ipmipower_cipher_suite_id.c: Removed files.

	* ipmipower/src/: Remove need for internal privilege_level_t,
	workaround flags, and cipher_suite_id_t type and macros.
	
	* ipmipower/: Continue cleanup/fixes.
